--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Studenti</title>
+  <link rel="stylesheet" href="master.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="main.js" charset="utf-8"></script>
 </head>
 <body>
-  <p>ciao</p>
+  <div class="col-12"><h1>Tabella studenti</h1></div>
+  <table>
+    <tr>
+      <th>Nome studente</th>
+      <th>Cognome studente</th>
+      <th>Età</th>
+    </tr>
+    <tr id="studente">
+
+    </tr>
+  </table>
 </body>
 </html>
