--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="main.js" charset="utf-8"></script>
 </head>
 <body>
-  <div class="col-12"><h1>Tabella studenti</h1></div>
+  <div class="col-12"><h1>Tabella studente</h1></div>
   <table>
     <tr>
       <th>Nome studente</th>
@@ -21,5 +21,12 @@
 
     </tr>
   </table>
+
+  <div class="col-12">
+  <h1>Studenti</h1>
+  <ul id="studenti">
+
+  </ul>
+  </div>
 </body>
 </html>
