Fine esercizio da inserire parte grafica

--- a/index.html
+++ b/index.html
@@ -11,22 +11,33 @@
 </head>
 <body>
   <div class="col-12"><h1>Tabella studente</h1></div>
-  <table>
-    <tr>
-      <th>Nome studente</th>
-      <th>Cognome studente</th>
-      <th>Età</th>
-    </tr>
-    <tr id="studente">
+ <table>
+   <tr>
+     <th>Nome studente</th>
+     <th>Cognome studente</th>
+     <th>Età</th>
+   </tr>
+   <tr id="studente">
 
-    </tr>
-  </table>
+   </tr>
+   <tr id=nuovi>
+
+   </tr>
+ </table>
 
   <div class="col-12">
   <h1>Studenti</h1>
   <ul id="studenti">
-
   </ul>
+  </div>
+  <div class="col-12">
+    <h1>Inserisci un nuovo studente</h1>
+    <div class="center">
+      <input id="name" type="text" name="nome" value="" placeholder="Nome">
+      <input id="cognome" type="text" name="cognome" value="" placeholder="Cognome">
+      <input id="eta" type="text" name="età" value="" placeholder="Età">
+      <button type="button" name="button">Aggiungi</button>
+    </div>
   </div>
 </body>
 </html>
