Aggiunta parte grafica

--- a/index.html
+++ b/index.html
@@ -11,24 +11,20 @@
 </head>
 <body>
   <div class="col-12"><h1>Tabella studente</h1></div>
- <table>
-   <tr>
-     <th>Nome studente</th>
-     <th>Cognome studente</th>
-     <th>Età</th>
-   </tr>
-   <tr id="studente">
+  <table>
+    <tr>
+      <th>Nome studente</th>
+      <th>Cognome studente</th>
+      <th>Età</th>
+    </tr>
+    <tr id="studente">
+    </tr>
+  </table>
 
-   </tr>
-   <tr id=nuovi>
-
-   </tr>
- </table>
-
-  <div class="col-12">
-  <h1>Studenti</h1>
-  <ul id="studenti">
-  </ul>
+  <div class="col-12 students">
+    <h1>Studenti</h1>
+    <ul class="nuovi" id="studenti">
+    </ul>
   </div>
   <div class="col-12">
     <h1>Inserisci un nuovo studente</h1>
